<resources>
    <string name="app_name">TheCocktailDB Demo</string>

    <string name="login_title">TheCocktailDB Demo Login</string>

    <string name="bottom_nav_favorites_title">Favorites</string>
    <string name="bottom_nav_ingredients_title">Ingredients</string>
    <string name="bottom_nav_categories_title">Categories</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="server_error">Server error</string>
    <string name="no_categories_found">No categories found</string>
    <string name="no_ingredients_found">No ingredients found</string>
    <string name="no_drinks_found">No drinks found</string>

    <string name="content_description_category_icon">Category icon</string>
    <string name="content_description_ingredient">Ingredient description</string>
    <string name="content_description_photo_of_drink">Photo of drink</string>

    <string name="retry">Retry</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="invalid_creds">Invalid email and/or password</string>
    <string name="add_cocktail">Add cocktail</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="name">Name</string>
    <string name="cocktail_recipe">Cocktail recipe</string>
    <string name="category">Category</string>
    <string name="please_select">Please select</string>
    <string name="ingredients">Ingredients</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="close">Close</string>
    <string name="done">Done</string>

</resources>
