<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="@dimen/list_item_horizontal_padding"
    android:paddingEnd="@dimen/list_item_horizontal_padding">

    <ImageView
        android:id="@+id/categoryImageView"
        android:layout_width="@dimen/list_item_image_size"
        android:layout_height="@dimen/list_item_image_size"
        android:contentDescription="@string/content_description_category_icon"
        tools:srcCompat="@drawable/ic_glass_cocktail_24dp" />

    <TextView
        android:id="@+id/categoryTextView"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="@dimen/list_item_horizontal_padding"
        android:paddingEnd="@dimen/list_item_horizontal_padding"
        tools:text="Cocktails" />

</LinearLayout>