...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ingredient.IngredientsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingTop="@dimen/list_vertical_padding"
        android:paddingBottom="@dimen/list_vertical_padding"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
