<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_categories"
        android:title="@string/bottom_nav_categories_title"
        android:icon="@drawable/ic_glass_cocktail_24dp"/>

    <item
        android:id="@+id/bottom_nav_ingredients"
        android:title="@string/bottom_nav_ingredients_title"
        android:icon="@drawable/ic_fruit_cherries_24dp"/>

    <item
      android:id="@+id/bottom_nav_favorites"
      android:title="@string/bottom_nav_favorites_title"
      android:icon="@drawable/ic_favorite_24dp"/>

</menu>
